--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,19 @@
 [project]
-name = "transformer"
+name = "transformers"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "ipykernel>=6.29.5",
+    "jaxtyping>=0.3.2",
     "numpy>=2.2.5",
     "torch>=2.7.0",
+    "typeguard>=4.4.2",
 ]
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
