--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,20 @@
 [project]
-name = "transformers"
+name = "transformer"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "einops>=0.8.1",
     "ipykernel>=6.29.5",
     "jaxtyping>=0.3.2",
+    "matplotlib>=3.10.3",
     "numpy>=2.2.5",
+    "pandas>=2.2.3",
+    "scikit-learn>=1.6.1",
     "torch>=2.7.0",
-    "typeguard>=4.4.2",
+    "torchvision>=0.22.0",
+    "tqdm>=4.67.1",
 ]
 
 [tool.setuptools]
